[#13248] Temporarily split v2 read property