@@ -5,6 +5,9 @@ import com.navercorp.pinpoint.common.server.util.ApplicationRowKeyUtils;
 import com.navercorp.pinpoint.web.component.ApplicationFactory;
 import com.navercorp.pinpoint.web.vo.Application;
 import org.apache.hadoop.hbase.client.Result;
+import org.apache.hadoop.hbase.util.Bytes;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
@@ -13,7 +16,7 @@ import java.util.Objects;
 
 @Component
 public class ApplicationMapper implements RowMapper<List<Application>> {
-
+    private final Logger logger = LogManager.getLogger(this.getClass());
     private final ApplicationFactory applicationFactory;
 
     public ApplicationMapper(ApplicationFactory applicationFactory) {
@@ -26,9 +29,14 @@ public class ApplicationMapper implements RowMapper<List<Application>> {
             return Collections.emptyList();
         }
         byte[] row = result.getRow();
-        int serviceUid = ApplicationRowKeyUtils.extractServiceUid(row);
-        String applicationName = ApplicationRowKeyUtils.extractApplicationName(row);
-        int serviceTypeCode = ApplicationRowKeyUtils.extractServiceTypeCode(row);
-        return List.of(applicationFactory.createApplication(serviceUid, applicationName, serviceTypeCode));
+        try {
+            int serviceUid = ApplicationRowKeyUtils.extractServiceUid(row);
+            String applicationName = ApplicationRowKeyUtils.extractApplicationName(row);
+            int serviceTypeCode = ApplicationRowKeyUtils.extractServiceTypeCode(row);
+            return List.of(applicationFactory.createApplication(serviceUid, applicationName, serviceTypeCode));
+        } catch (Exception e) {
+            logger.warn("Failed to parse application row key. rowKey={}, message={}", Bytes.toStringBinary(row), e.getMessage());
+            return Collections.emptyList();
+        }
     }
 }
